# hal-bot

./: .gitignore  README.md  bot.py  config.example.json  config.json  pyproject.toml  reminder.example.json  requirements.txt
