[project]
name = "discord-reminder-bot"
version = "1.4.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "py-cord>=2.7.0",
    "requests>=2.32.5",
]
