[project]
name = "hal-bot"
version = "1.5.5"
description = "A discord bot that provides blu-ray.com news as well as arbitrary reminders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "cssselect>=1.3.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "py-cord>=2.7.0",
    "requests>=2.32.5",
]
